--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-11 18:58-0300\n"
+"PO-Revision-Date: 2021-01-12 08:40-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -315,20 +315,25 @@ msgid ""
 "A simple of example of :class:`~concurrent.futures.ThreadPoolExecutor` is a "
 "launch of four parallel threads for copying files::"
 msgstr ""
+"Un ejemplo simple de :class:`~concurrent.futures.ThreadPoolExecutor` es un "
+"lanzamiento de cuatro hilos paralelos para copiar archivos::"
 
 #: ../Doc/whatsnew/3.2.rst:281
 msgid ":pep:`3148` - Futures -- Execute Computations Asynchronously"
-msgstr ""
+msgstr ":pep:`3148` - Futuros -- Ejecutar Cómputos Asincrónicos"
 
 #: ../Doc/whatsnew/3.2.rst:281
 msgid "PEP written by Brian Quinlan."
-msgstr ""
+msgstr "PEP escrito por Brian Quinlan."
 
 #: ../Doc/whatsnew/3.2.rst:283
 msgid ""
 ":ref:`Code for Threaded Parallel URL reads<threadpoolexecutor-example>`, an "
 "example using threads to fetch multiple web pages in parallel."
 msgstr ""
+":ref:`Código para lecturas de URL en paralelo con grupos de "
+"hilos<threadpoolexecutor-example>`, un ejemplo que usa hilos para buscar "
+"varias páginas web en paralelo."
 
 #: ../Doc/whatsnew/3.2.rst:286
 msgid ""
@@ -336,10 +341,13 @@ msgid ""
 "example>`, an example demonstrating :class:`~concurrent.futures."
 "ProcessPoolExecutor`."
 msgstr ""
+":ref:`Código para calcular números primos en paralelo<processpoolexecutor-"
+"example>`, un ejemplo demostrando :class:`~concurrent.futures."
+"ProcessPoolExecutor`."
 
 #: ../Doc/whatsnew/3.2.rst:292
 msgid "PEP 3147:  PYC Repository Directories"
-msgstr ""
+msgstr "PEP 3147: Directorios del repositorio de PYC"
 
 #: ../Doc/whatsnew/3.2.rst:294
 msgid ""
@@ -349,6 +357,11 @@ msgid ""
 "the source and overwrite the cached file, thus losing the benefits of "
 "caching."
 msgstr ""
+"El esquema de Python para almacenar en caché el código de bytes en archivos "
+"*.pyc* no funcionó bien en entornos con múltiples intérpretes de Python. Si "
+"un intérprete encontrara un archivo en caché creado por otro intérprete, "
+"volvería a compilar la fuente y sobrescribiría el archivo en caché, "
+"perdiendo así los beneficios del almacenamiento en caché."
 
 #: ../Doc/whatsnew/3.2.rst:299
 msgid ""
@@ -357,6 +370,10 @@ msgid ""
 "Python. These conflicts also arise with CPython alternatives such as Unladen "
 "Swallow."
 msgstr ""
+"El problema de las \"peleas de pyc\" se ha vuelto más pronunciado a medida "
+"que se ha convertido en un lugar común para las distribuciones de Linux "
+"enviadas con múltiples versiones de Python. Estos conflictos también surgen "
+"con alternativas de CPython como *Unladen Swallow*."
 
 #: ../Doc/whatsnew/3.2.rst:303
 msgid ""
