--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -1,33 +1,35 @@
 # Copyright (C) 2001-2020, Python Software Foundation
 # This file is distributed under the same license as the Python package.
-# Maintained by the python-doc-es workteam. 
+# Maintained by the python-doc-es workteam.
 # docs-es@python.org / https://mail.python.org/mailman3/lists/docs-es.python.org/
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-01-12 13:33-0500\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.3\n"
 
 #: ../Doc/whatsnew/2.3.rst:3
 msgid "What's New in Python 2.3"
-msgstr ""
+msgstr "¿Qué hay de nuevo en Python 2.3?"
 
 #: ../Doc/whatsnew/2.3.rst:0
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: ../Doc/whatsnew/2.3.rst:5
 msgid "A.M. Kuchling"
-msgstr ""
+msgstr "A.M. Kuchling"
 
 #: ../Doc/whatsnew/2.3.rst:11
 msgid ""
@@ -69,7 +71,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.3.rst:41
 msgid "PEP 218: A Standard Set Datatype"
-msgstr ""
+msgstr "PEP 218: A Standard Set Datatype"
 
 #: ../Doc/whatsnew/2.3.rst:43
 msgid ""
@@ -83,7 +85,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.3.rst:50
 msgid "Here's a simple example::"
-msgstr ""
+msgstr "Aquí hay un ejemplo simple::"
 
 #: ../Doc/whatsnew/2.3.rst:66
 msgid ""
@@ -2332,7 +2334,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.3.rst:2077
 msgid "Acknowledgements"
-msgstr ""
+msgstr "Agradecimientos"
 
 #: ../Doc/whatsnew/2.3.rst:2079
 msgid ""
@@ -2345,3 +2347,11 @@ msgid ""
 "Norwitz, Hans Nowak, Chris Reedy, Francesco Ricciardi, Vinay Sajip, Neil "
 "Schemenauer, Roman Suzi, Jason Tishler, Just van Rossum."
 msgstr ""
+"El autor desea agradecer a las siguientes personas por ofrecer sugerencias, "
+"correcciones y asistencia en los diversos borradores de este artículo:Jeff "
+"Bauer, Simon Brunning, Brett Cannon, Michael Chermside, Andrew Dalke, Scott "
+"David Daniels, Fred L. Drake, Jr, David Fraser, Kelly Gerber, Raymond "
+"Hettinger, Michael Hudson, Chris Lambert, Detlef Lannert, Martin von Löwis, "
+"Andrew MacIntyre, Lalo Martins, Chad Netzer, Gustavo Niemeyer, Neal Norwitz, "
+"Hans Nowak, Chris Reedy, Francesco Ricciardi, Vinay Sajip, Neil Schemenauer, "
+"Roman Suzi, Jason Tishler, Just van Rossum."
