correcciones en las primeras cinco lineas

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -516,8 +516,8 @@ msgstr ""
 msgid ""
 "pure ASCII and Latin1 strings (``U+0000-U+00FF``) use 1 byte per code point;"
 msgstr ""
-"Los strings en ASCII puro y Latin1 (``U+0000-U+00FF``) usan 1 byte por punto "
-"de código;"
+"las cadenas de caracteres en ASCII puro y Latin1 (``U+0000-U+00FF``) usan 1 "
+"byte por punto de código;"
 
 #: ../Doc/whatsnew/3.3.rst:265
 msgid "BMP strings (``U+0000-U+FFFF``) use 2 bytes per code point;"
@@ -528,8 +528,8 @@ msgstr ""
 #: ../Doc/whatsnew/3.3.rst:267
 msgid "non-BMP strings (``U+10000-U+10FFFF``) use 4 bytes per code point."
 msgstr ""
-"Los strings que no son BMP (``U+10000-U+10FFFF``) usan 4 bytes por punto de "
-"código."
+"las cadenas de caracteres que no son BMP (``U+10000-U+10FFFF``) usan 4 bytes "
+"por punto de código."
 
 #: ../Doc/whatsnew/3.3.rst:269
 msgid ""
@@ -3573,7 +3573,7 @@ msgid ""
 "information about it;"
 msgstr ""
 ":func:`~signal.sigwaitinfo`: Espera una señal, devolviendo información "
-"detallada sobre él."
+"detallada sobre ella."
 
 #: ../Doc/whatsnew/3.3.rst:1833
 msgid ""
@@ -4260,8 +4260,8 @@ msgid ""
 "encode an ASCII string to UTF-8 doesn't need to encode characters anymore, "
 "the UTF-8 representation is shared with the ASCII representation"
 msgstr ""
-"Codificar una cadena ASCII a UTF-8 ya no necesita de codificar caracteres, "
-"la representación UTF-8 se comparte con la representación ASCII"
+"Codificar una cadena ASCII a UTF-8 ya no necesita codificar caracteres, la "
+"representación UTF-8 se comparte con la representación ASCII"
 
 #: ../Doc/whatsnew/3.3.rst:2158
 msgid "the UTF-8 encoder has been optimized"
@@ -4273,7 +4273,7 @@ msgid ""
 "is 4 times faster"
 msgstr ""
 "Repetir una única letra ASCII y obtener una subcadena de una cadena ASCII es "
-"4 veces más rápido."
+"4 veces más rápido"
 
 #: ../Doc/whatsnew/3.3.rst:2162
 msgid "UTF-8 is now 2x to 4x faster.  UTF-16 encoding is now up to 10x faster."
